Fix busted twitter logo on safari

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -298,8 +298,10 @@ header {
       color: $textLight;
     }
 
-    img {
+    .tweet-logo {
       grid-area: logo;
+      height: 29px;
+      width: 36px;
     }
   }
 
